force-app/main/default/objects/TriggerSetting__mdt/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled?</label>
    <type>Checkbox</type>
</CustomField>