force-app/main/default/objects/TriggerSetting__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>The name of Salesforce object for the trigger setting record</description>
    <inlineHelpText>The name of Salesforce object for the trigger setting record</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>