force-app/main/default/objects/TriggerSetting__mdt/fields/PreventRecursion__c.field-meta.xml
<CustomField>
    <fullName>PreventRecursion__c</fullName>
    <label>Prevent Recursion</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>