force-app/main/default/objects/TriggerSetting__mdt/validationRules/Prevent_Recursion_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Recursion_Validation_Rule</fullName>
    <active>true</active>
    <description>Enter Prevent Recursion field API names as comma separated List and without spaces</description>
    <errorConditionFormula>CONTAINS( PreventRecursion__c , &apos; &apos; )</errorConditionFormula>
    <errorDisplayField>PreventRecursion__c</errorDisplayField>
    <errorMessage>Please enter Prevent Recursion field API names as comma separated List and without spaces</errorMessage>
</ValidationRule>